fix gap

--- a/src/layouts/game.css
+++ b/src/layouts/game.css
@@ -4,6 +4,7 @@ body {
 }
 
 main {
+	overflow: hidden;
 	max-width: 1280px;
 	margin-inline: auto;
 
